--- a/css/main.css
+++ b/css/main.css
@@ -3392,7 +3392,7 @@ footer a:hover, footer a:focus {
     content: "|";
     display: inline-block;
     padding: 0 1rem 0 1.2rem;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255);
 }
 
 .footer-bottom .copyright span:last-child::after {
