--- a/css/main.css
+++ b/css/main.css
@@ -737,7 +737,7 @@ label, legend {
     font-size: 1.4rem;
     margin-bottom: .9rem;
     line-height: 1.714;
-    color: #0D0A0B;
+    color: #030303;
     display: block;
 }
 
@@ -815,7 +815,7 @@ input[type="button"] {
     line-height: calc(5.4rem - .6rem);
     padding: 0 3rem;
     margin: 0 .3rem 1.2rem 0;
-    color: #151515;
+    color: #030303;
     text-decoration: none;
     cursor: pointer;
     text-align: center;
@@ -850,8 +850,8 @@ button.btn--primary,
 input[type="submit"].btn--primary,
 input[type="reset"].btn--primary,
 input[type="button"].btn--primary {
-    background: #0D0A0B;
-    border-color: #0D0A0B;
+    background: #030303;
+    border-color: #030303;
     color: #FFFFFF;
 }
 
@@ -1118,7 +1118,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     font-size: 2.5rem;
     font-family: "montserrat-semibold", sans-serif;
     border: none;
-    color: #151515;
+    color: #030303;
 }
 
 .stats-tabs li a:hover {
@@ -1157,7 +1157,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     left: 0;
     top: -3rem;
     font-family: "montserrat-extrabold", sans-serif;
-    color: #0D0A0B;
+    color: #030303;
     text-transform: uppercase;
     letter-spacing: .2rem;
     font-size: 1.4rem;
@@ -1393,12 +1393,12 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     margin-top: .3rem;
     margin-bottom: 2.1rem;
     padding-bottom: 2.4rem;
-    color: #0D0A0B;
+    color: #030303;
     position: relative;
 }
 
 .blog-list h2 a {
-    color: #0D0A0B;
+    color: #030303;
 }
 
 .blog-list h2::after {
@@ -1790,7 +1790,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .no-js .s-home {
-    background: #0D0A0B;
+    background: #030303;
 }
 
 
@@ -2279,7 +2279,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .timeline__bullet {
-    background: #0D0A0B;
+    background: #030303;
     height: 1.5rem;
     width: 1.5rem;
     border-radius: 50%;
@@ -2615,7 +2615,7 @@ html.no-csstransitions .home-content__main {
  * ------------------------------------------------------------------- */
 
 .s-testimonials {
-    background-color: #0D0A0B;
+    background-color: #030303;
     background-image: url("../images/testimonial-bg.jpf");
     background-repeat: no-repeat;
     background-position: center, center;
@@ -2632,7 +2632,7 @@ html.no-csstransitions .home-content__main {
     width: 100%;
     height: 100%;
     opacity: .85;
-    background-color: #0D0A0B;
+    background-color: #030303;
 }
 
 .testimonials-header {
@@ -2887,7 +2887,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .cta__content h2 a {
-    color: #0D0A0B;
+    color: #030303;
 }
 
 .cta__content span {
@@ -2924,14 +2924,14 @@ html.no-csstransitions .home-content__main {
     font-size: 2.1rem;
     line-height: 1;
     color: #cf3e3e;
-    color: #008C2C;
+    color: #ff3333;
 }
 
 .stats__count {
     font-family: "montserrat-bold", serif;
     font-size: 7.2rem;
     line-height: 1;
-    color: #0D0A0B;
+    color: #030303;
     padding-bottom: 1.5rem;
     position: relative;
     overflow: hidden;
@@ -2974,7 +2974,7 @@ html.no-csstransitions .home-content__main {
     width: 100%;
     height: 100%;
     opacity: .6;
-    background-image: linear-gradient(to bottom, rgba(13, 10, 11, 0) 0%, #0D0A0B 100%);
+    background-image: linear-gradient(to bottom, rgba(13, 10, 11, 0) 0%, #030303 100%);
 }
 
 .stats__col--highlight .stats__count {
@@ -3040,7 +3040,7 @@ html.no-csstransitions .home-content__main {
  * ------------------------------------------------------------------- */
 
 .s-contact {
-    background-color: #151515;
+    background-color: #030303;
     background-image: linear-gradient(#1d0000, #000000);
     background-image: url("../images/contact-bg.jpg");
     background-repeat: no-repeat;
@@ -3156,7 +3156,7 @@ html.no-csstransitions .home-content__main {
 
 .message-warning, .message-success {
     display: none;
-    background: #0D0A0B;
+    background: #030303;
     font-size: 1.5rem;
     line-height: 2;
     padding: 3rem;
@@ -3169,7 +3169,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .message-success {
-    color: #008C2C;
+    color: #ff3333;
 }
 
 .message-warning i, .message-success i {
@@ -3503,7 +3503,7 @@ article.blog-single .blog-content {
  * ------------------------------------------------------------------- */
 
 .page-header {
-    background-color: #0D0A0B;
+    background-color: #030303;
     background-repeat: no-repeat;
     background-position: center, center;
     padding-top: 20.4rem;
@@ -3528,7 +3528,7 @@ article.blog-single .blog-content {
     width: 100%;
     height: 100%;
     opacity: .75;
-    background-color: #0D0A0B;
+    background-color: #030303;
 }
 
 .page-header::after {
@@ -3778,7 +3778,7 @@ article.blog-single .blog-content {
 
 .blog-content__tags span {
     font-family: "montserrat-bold", sans-serif;
-    color: #0D0A0B;
+    color: #030303;
     position: relative;
     padding-right: 55px;
     margin-right: 1.5rem;
@@ -3821,8 +3821,8 @@ article.blog-single .blog-content {
 
 .blog-content__tags .blog-content__tag-list a:hover,
 .blog-content__tags .blog-content__tag-list a:focus {
-    background-color: #0D0A0B;
-    border-color: #0D0A0B;
+    background-color: #030303;
+    border-color: #030303;
     color: #FFFFFF;
 }
 
@@ -3865,11 +3865,11 @@ article.blog-single .blog-content {
     font-family: "montserrat-bold", sans-serif;
     font-size: 2.2rem;
     line-height: 1.5;
-    color: #0D0A0B;
+    color: #030303;
 }
 
 .blog-content__nav a:hover span, .blog-content__nav a:focus span {
-    color: #0D0A0B;
+    color: #030303;
 }
 
 .blog-content__prev, .blog-content__next {
@@ -4073,7 +4073,7 @@ article.blog-single .blog-content {
     font-family: "montserrat-bold", sans-serif;
     font-size: 1.8rem;
     font-style: normal;
-    color: #0D0A0B;
+    color: #030303;
 }
 
 .comment__meta {
