update portfolio modal colors

--- a/css/main.css
+++ b/css/main.css
@@ -2506,15 +2506,16 @@ html.no-csstransitions .home-content__main {
 	padding: 1.8rem 3.6rem 3rem;
 }
 .popup-modal .description-box h4 {
-  font-color: black;
 	font-size: 1.5rem;
 	line-height: 2.4rem;
 	margin-bottom: .6rem;
+  color: rgb(0, 0, 0);
 }
 .popup-modal .description-box p {
 	font-size: 1.4rem;
 	line-height: 2.4rem;
 	margin-bottom: 12px;
+  color: rgb(0, 0, 0);
 }
 .popup-modal .categories {
 	font-size: 1.1rem;
