--- a/css/main.css
+++ b/css/main.css
@@ -1833,7 +1833,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 
 .home-content h1 {
     font-family: "montserrat-bold", sans-serif;
-    color: #f5f5f5;
+    color: #ffffff;
     font-size: 0.5rem;
     line-height: 1.1;
     margin-top: 0;
@@ -3165,7 +3165,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .message-warning {
-    color: #ff6163;
+    color: #ff3333;
 }
 
 .message-success {
