add margin to bio text

--- a/css/main.css
+++ b/css/main.css
@@ -2240,6 +2240,7 @@ html.no-csstransitions .home-content__main {
 
 .about-content {
     margin-bottom: 3rem;
+    margin: 5%;
 }
 
 .about-content .left {
