--- a/css/main.css
+++ b/css/main.css
@@ -2206,7 +2206,7 @@ html.no-csstransitions .home-content__main {
 
 @media only screen and (max-width: 400px) {
     .home-content {
-        vertical-align: middle;
+        vertical-align: bottom;
     }
     .home-content h1 {
         font-size: 3.5rem;
