--- a/css/main.css
+++ b/css/main.css
@@ -4197,3 +4197,16 @@ article.blog-single .blog-content {
      column-count: 3;
    }
  }
+
+ .masonry { /* Masonry container */
+  column-count: 2;
+  column-gap: 1em;
+}
+
+.item { /* Masonry bricks or child elements */
+  border-radius:20px;
+  background-color: #5b5b5b;
+  display: inline-block;
+  margin: 0 0 2em;
+  width: 100%;
+}
