--- a/404/style.css
+++ b/404/style.css
@@ -1,27 +1,27 @@
 .cls-1 {
-  fill: #f91e15;
+  fill: #9849b1;
 }
 
 .cls-2 {
-  fill: #f91e15;
+  fill: #9849b1;
 }
 
 .cls-3 {
-  fill: #ffffff;
+  fill: #e6aef7;
 }
 
 .cls-4 {
-  fill: #9a0d0d;
+  fill: #73298a;
 }
 
 .cls-5 {
-  fill: #ef6868;
+  fill: #c47adc;
 }
 
 .cls-6,
 .cls-7,
 .cls-8 {
-  fill: #9a0d0d;
+  fill: #73298a;
 }
 
 .cls-10,
@@ -34,23 +34,23 @@
 }
 
 .cls-9 {
-  fill: #fba3a3;
+  fill: #da85f5;
 }
 
 .cls-11 {
-  fill: #9a0d0d;
+  fill: #73298a;
 }
 
 .cls-12 {
-  fill: #571616;
+  fill: #60067d;
 }
 
 .cls-13 {
-  fill: #571616;
+  fill: #60067d;
 }
 
 .cls-14 {
-  fill: #9a0d0d;
+  fill: #73298a;
 }
 
 
