--- a/css/main.css
+++ b/css/main.css
@@ -2516,7 +2516,7 @@ html.no-csstransitions .home-content__main {
 .popup-modal .link-box {
 	width: 100%;
 	overflow: hidden;
-	background: #851212;
+	background: #9849b1;
 }
 .popup-modal .link-box a {
 	font-size: 1.2rem;
