--- a/css/main.css
+++ b/css/main.css
@@ -4235,7 +4235,7 @@ article.blog-single .blog-content {
       font-style: italic;
     }
     .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
 }
