--- a/css/main.css
+++ b/css/main.css
@@ -4231,7 +4231,7 @@ article.blog-single .blog-content {
       margin: 5px 0;
       padding: 0;
       text-align: left;
-      font-style: italic;
+      font-style: normal;
     }
     .card {
 
