--- a/css/fonts.css
+++ b/css/fonts.css
@@ -13,7 +13,7 @@
     src: url("../fonts/montserrat/montserrat-black-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-black-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
-    font-display: swap
+    font-display: swap;
 }
 
 @font-face {
@@ -21,7 +21,7 @@
     src: url("../fonts/montserrat/montserrat-extrabold-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-extrabold-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
-    font-display: swap
+    font-display: swap;
 }
 
 @font-face {
@@ -29,7 +29,7 @@
     src: url("../fonts/montserrat/montserrat-bold-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-bold-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
-    font-display: swap
+    font-display: swap;
 }
 
 @font-face {
@@ -37,7 +37,7 @@
     src: url("../fonts/montserrat/montserrat-semibold-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-semibold-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
-    font-display: swap
+    font-display: swap;
 }
 
 @font-face {
@@ -45,7 +45,7 @@
     src: url("../fonts/montserrat/montserrat-medium-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-medium-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
-    font-display: swap
+    font-display: swap;
 }
 
 @font-face {
@@ -53,7 +53,7 @@
     src: url("../fonts/montserrat/montserrat-regular-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-regular-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
-    font-display: swap
+    font-display: swap;
 }
 
 @font-face {
@@ -61,7 +61,7 @@
     src: url("../fonts/montserrat/montserrat-light-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-light-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
-    font-display: swap
+    font-display: swap;
 }
 
 @font-face {
@@ -69,7 +69,7 @@
     src: url("../fonts/montserrat/montserrat-extralight-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-extralight-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
-    font-display: swap
+    font-display: swap;
 }
 
 @font-face {
@@ -77,5 +77,5 @@
     src: url("../fonts/montserrat/montserrat-thin-webfont.woff2") format("woff2"), url("../fonts/montserrat/montserrat-thin-webfont.woff") format("woff");
     font-style: normal;
     font-weight: normal;
-    font-display: swap
+    font-display: swap;
 }
