--- a/css/main.css
+++ b/css/main.css
@@ -1695,7 +1695,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 
 .header-nav li.current a {
     font-family: "montserrat-extrabold", sans-serif;
-    color: #9849b1;
+    color: #FF0000;
 }
 
 
