--- a/css/main.css
+++ b/css/main.css
@@ -385,7 +385,7 @@ ul.disc li::before {
     width: 8px;
     height: 8px;
     border-radius: 50%;
-    background: #9849b1;
+    background: #ff0000;
     position: absolute;
     left: -17px;
     top: 11px;
@@ -394,7 +394,7 @@ ul.disc li::before {
 
 dt {
     margin: 0;
-    color: #9849b1;
+    color: #ff0000;
 }
 
 dd {
@@ -552,7 +552,7 @@ form,
 }
 
 .pace .pace-progress {
-    background: #9849b1;
+    background: #ff0000;
     position: fixed;
     z-index: 900;
     top: 0;
@@ -597,7 +597,7 @@ form,
     margin-left: -30px;
     margin-top: -30px;
     padding: 0;
-    background-color: #9849b1;
+    background-color: #ff0000;
     border-radius: 100%;
     -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
     animation: sk-scaleout 1.0s infinite ease-in-out;
@@ -1122,7 +1122,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .stats-tabs li a:hover {
-    color: #9849b1;
+    color: #ff0000;
 }
 
 .stats-tabs li a em {
@@ -1311,7 +1311,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .section-intro h3 {
     font-family: "montserrat-semibold", sans-serif;
     font-size: 2rem;
-    color: #9849b1;
+    color: #ff0000;
     text-transform: uppercase;
     letter-spacing: .15rem;
     margin-top: 0;
@@ -1415,11 +1415,11 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .blog-list .blog-date {
     font-family: "montserrat-regular", sans-serif;
     font-size: 1.5rem;
-    color: #9849b1;
+    color: #ff0000;
 }
 
 .blog-list .blog-date a {
-    color: #9849b1;
+    color: #ff0000;
 }
 
 .blog-list .blog-date a:hover,
@@ -1444,7 +1444,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .blog-list .blog-cat a:hover,
 .blog-list .blog-cat a:focus,
 .blog-list .blog-cat a:active {
-    color: #9849b1;
+    color: #ff0000;
 }
 
 .blog-list .blog-cat a::after {
@@ -1874,8 +1874,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-content__scroll a::after {
-    border-bottom: 2px solid #9849b1;
-    border-right: 2px solid #9849b1;
+    border-bottom: 2px solid #ff0000;
+    border-right: 2px solid #ff0000;
     content: '';
     display: block;
     height: 8px;
@@ -1949,7 +1949,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-social span {
-    color: #9849b1;
+    color: #ff0000;
     right: 3.6rem;
     font-size: 1.3rem;
     opacity: 0;
@@ -2920,8 +2920,8 @@ html.no-csstransitions .home-content__main {
 .stats__upsign i {
     font-size: 2.1rem;
     line-height: 1;
-    color: #cf3e3e;
-    color: #9849b1;
+    color: #ff8a8a;
+    color: #ff0000;
 }
 
 .stats__count {
@@ -2979,7 +2979,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .stats__col--highlight .stats__count::after {
-    background-color: #9849b1;
+    background-color: #ff0000;
 }
 
 .stats__col--highlight h4 {
@@ -3090,7 +3090,7 @@ html.no-csstransitions .home-content__main {
     padding: 0 2rem;
     margin: 0;
     color: #000000;
-    background: #9849b1;
+    background: #ff0000;
 }
 
 .s-contact .form-field label::after {
@@ -3101,7 +3101,7 @@ html.no-csstransitions .home-content__main {
     margin-top: -6px;
     border-top: 5px solid transparent;
     border-bottom: 5px solid transparent;
-    border-right: 5px solid #9849b1;
+    border-right: 5px solid #ff0000;
 }
 
 .contact__main {
@@ -3145,8 +3145,8 @@ html.no-csstransitions .home-content__main {
 
 .contact__form button {
     margin-top: 4.2rem;
-    background-color: #9849b1;
-    border-color: #9849b1;
+    background-color: #ff0000;
+    border-color: #ff0000;
 }
 
 .message-warning, .message-success {
@@ -3160,11 +3160,11 @@ html.no-csstransitions .home-content__main {
 }
 
 .message-warning {
-    color: #9849b1;
+    color: #ff0000;
 }
 
 .message-success {
-    color: #9849b1;
+    color: #ff0000;
 }
 
 .message-warning i, .message-success i {
@@ -4253,5 +4253,5 @@ article.blog-single .blog-content {
 img {
   border-radius: 5px 5px 0 0;
 }
-  }
-}
+  
+
